--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ small {
 
 /* ------ Footer ------ */
 .footer {
-  padding: 60px 0 20x;
+  padding: 60px 0 20px;
   background: #000;
   color: #8a8a8a;
   font-size: 14px;
